added a hover effect to my button

--- a/style.css
+++ b/style.css
@@ -148,6 +148,12 @@ h2,h3{
     font-weight: 700;
     font-size: 1.1rem;
     /* width: 200px; */
+    cursor: pointer;
+    transition: box-shadow 500ms;
+}
+
+#gen-btn:hover{
+    box-shadow: 0 0 5px 8px rgba(255, 0, 0, 0.3);
 }
 
 
